--- a/section-five.html
+++ b/section-five.html
@@ -1,3 +1,22 @@
-<section id="five">
-  <div class="full-img" style="background-image:url('img/g3.jpg')"><h2>Full width image</h2></div>
-</section>
+<!DOCTYPE html>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Examples</title>
+
+    <link rel="stylesheet" href="css/vendor/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,800;1,300;1,400;1,600&display=swap" rel="stylesheet">
+
+  </head>
+  <body>
+    <section id="five">
+      <div class="full-img" style="background-image:url('img/g3.jpg')"><h2>Full width image</h2></div>
+    </section>
+  </body>
+</html>
+
