--- a/section-four.html
+++ b/section-four.html
@@ -1,16 +1,34 @@
-<section id="four">
-  <div class="module">
-    <div class="image" style="background-image:url('img/g1.jpg')"></div>
-    <div class="text">
-      <h2>Module 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo.</p>
-    </div>
-  </div>
-  <div class="module">
-    <div class="image" style="background-image:url('img/g4.jpg')"></div>
-    <div class="text">
-      <h2>Module 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo.</p>
-    </div>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Examples</title>
+
+    <link rel="stylesheet" href="css/vendor/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,800;1,300;1,400;1,600&display=swap" rel="stylesheet">
+
+  </head>
+  <body>
+    <section id="four">
+      <div class="module">
+        <div class="image" style="background-image:url('img/g1.jpg')"></div>
+        <div class="text">
+          <h2>Module 1</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo.</p>
+        </div>
+      </div>
+      <div class="module">
+        <div class="image" style="background-image:url('img/g4.jpg')"></div>
+        <div class="text">
+          <h2>Module 2</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo.</p>
+        </div>
+      </div>
+    </section>
+  </html>
+</body>
