--- a/section-one.html
+++ b/section-one.html
@@ -1,9 +1,27 @@
-<section id="one">
-  <div class="wrap">
-    <div class="img"><img src="img/poster.jpg"></div>
-    <div class="text">
-      <h2>Container, column flex example.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo. Nullam in lacinia lectus. Vivamus scelerisque accumsan felis vel sodales. Curabitur semper tincidunt molestie. Ut pharetra ligula vel nunc imperdiet consectetur. Vestibulum quis lobortis dolor, malesuada accumsan dolor. Fusce lobortis fringilla risus quis mattis.</p>
-    </div>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Examples</title>
+
+    <link rel="stylesheet" href="css/vendor/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,800;1,300;1,400;1,600&display=swap" rel="stylesheet">
+
+  </head>
+  <body>
+    <section id="one">
+      <div class="wrap">
+        <div class="img"><img src="img/poster.jpg"></div>
+        <div class="text">
+          <h2>Container, column flex example.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo. Nullam in lacinia lectus. Vivamus scelerisque accumsan felis vel sodales. Curabitur semper tincidunt molestie. Ut pharetra ligula vel nunc imperdiet consectetur. Vestibulum quis lobortis dolor, malesuada accumsan dolor. Fusce lobortis fringilla risus quis mattis.</p>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
