--- a/index.html
+++ b/index.html
@@ -12,73 +12,56 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,800;1,300;1,400;1,600&display=swap" rel="stylesheet">
 
+    <style type="text/css">
+    button {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: bisque;
+      border-radius: 50px;
+      height: 25px;
+    }
+    iframe {
+        -webkit-transition: width 3s; /* For Safari 3.1 to 6.0 */
+        transition: width 3s;
+        border:  1px solid grey;
+    }
+    .minimized {
+        width: 320px;
+    }
+    </style>
+
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="#one">Containers</a></li>
-        <li><a href="#two">Galleries</a></li>
-        <li><a href="#three">Images</a></li>
-        <li><a href="#four">Modules</a></li>
-        <li><a href="#five">Full width</a></li>
-      </ul>
-    </nav>
-    <header>
-      <h1><span>Guideline</span><br>Responsive design</h1>
-    </header>
-    <section id="one">
-      <div class="wrap">
-        <div class="img"><img src="img/poster.jpg"></div>
-        <div class="text">
-          <h2>Container, column flex example.</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo. Nullam in lacinia lectus. Vivamus scelerisque accumsan felis vel sodales. Curabitur semper tincidunt molestie. Ut pharetra ligula vel nunc imperdiet consectetur. Vestibulum quis lobortis dolor, malesuada accumsan dolor. Fusce lobortis fringilla risus quis mattis.</p>
-        </div>
-      </div>
-    </section>
-    <section id="two">
-      <h2>Image Gallery - Background Image</h2>
-      <div class="wrap">
-        <div class="image" style="background-image:url('img/g1.jpg')"></div>
-        <div class="image" style="background-image:url('img/g2.jpg')"></div>
-        <div class="image" style="background-image:url('img/g3.jpg')"></div>
-        <div class="image" style="background-image:url('img/g4.jpg')"></div>
-        <div class="image" style="background-image:url('img/g5.jpg')"></div>
-        <div class="image" style="background-image:url('img/g6.jpg')"></div>
-      </div>
-    </section>
-    <section id="three">
-      <h2>Image Gallery - Scale Image</h2>
-      <div class="wrap">
-        <div class="image" style="background-image:url('img/g1.jpg')"></div>
-        <div class="image" style="background-image:url('img/g2.jpg')"></div>
-        <div class="image" style="background-image:url('img/g3.jpg')"></div>
-        <div class="image" style="background-image:url('img/g4.jpg')"></div>
-        <div class="image" style="background-image:url('img/g5.jpg')"></div>
-        <div class="image" style="background-image:url('img/g6.jpg')"></div>
-      </div>
-    </section>
-    <section id="four">
-      <div class="module">
-        <div class="image" style="background-image:url('img/g1.jpg')"></div>
-        <div class="text">
-          <h2>Module 1</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo.</p>
-        </div>
-      </div>
-      <div class="module">
-        <div class="image" style="background-image:url('img/g4.jpg')"></div>
-        <div class="text">
-          <h2>Module 2</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius eleifend arcu eu blandit. Suspendisse sed lorem interdum, laoreet enim vel, posuere neque. Morbi tincidunt nulla odio, vitae ultrices dui lobortis eget. Nulla sem est, gravida eget pellentesque at, lobortis ac nibh. In dignissim efficitur venenatis. Quisque sed turpis sed enim ornare mattis et vitae sem. Sed laoreet ante non enim dictum, vitae faucibus neque commodo.</p>
-        </div>
-      </div>
-    </section>
-    <section id="five">
-      <div class="full-img" style="background-image:url('img/g3.jpg')"><h2>Full width image</h2></div>
-    </section>
+    <button onclick="animation()">Change device size</button>
+    <iframe src="" width="100%" height="1020px"></iframe>
+        <script type="text/javascript">
+
+      const iframeElt = document.getElementsByTagName("iframe")[0]
+      const urlSearchParams = new URLSearchParams(window.location.search);
+      const params = Object.fromEntries(urlSearchParams.entries());
+
+      iframeElt.src = window.location.origin + "/notion_responsive/section-" + params.demo + ".html" 
+      iframeElt.height = params.height
+
+      let animated = false;
+
+      function animation() {
+        if (!animated) {
+          animated = true
+          iframeElt.classList.add("minimized")
+          setTimeout(function() {
+              iframeElt.classList.remove("minimized");
+              setTimeout(function() {
+                animated = false
+              }, 3000)
+          }, 3500);
+        } else {
+          animated = false
+          iframeElt.classList.remove("minimized");
+        }
+      }
+
+    </script>
   </body>
-
-  <script type="text/javascript" src="js/vendor/jquery_v3.6.0.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
-
 </html>
